# prediction_market_tools

./: .gitignore  README.md  env-dev.yml  pyproject.toml  ruff.toml
docs/: UML.drawio  datamodel.d2
kalshi_tracker/: __init__.py  api.py  config.py  dateutil.py
kalshi_tracker/kalshi/: __init__.py  factory.py  kalshi.py  kalshi_client.py  kalshi_settings.py  keys.py  util.py
kalshi_tracker/kalshi/client/: __init__.py  exchange_client.py  kalshi_client.py
kalshi_tracker/kalshi/kalshi_client/: __init__.py  http_error.py  kalshi_client.py
kalshi_tracker/kalshi/settings/: __init__.py  key_settings.py  login_settings.py
kalshi_tracker/router/: __init__.py
kalshi_tracker/router/markets/: __init__.py  get_markets.py
kalshi_tracker/v1/: expected_value.py  kalshi.py
notebooks/: KalshiTradingV2ApiKey.ipynb  analyze_bets.ipynb  eta.ipynb  expected_value.ipynb  get_positions.ipynb  holding_value.ipynb
notebooks/old/: analyze_bets.ipynb  expected_value.ipynb  get_positions.ipynb  holding_value.ipynb
src/: __init__.py  config.py  expected_value.py  kalshi.py
src/kalshi/: __init__.py  kalshi.py  kalshi_settings.py
src/v1/: expected_value.py  kalshi.py
tests/: test_api.py  test_settings.py
tests/settings/: test_key_settings.py
tests/test_api/: fixtures.py  test_get_markets.py
tests/test_kalshi/test_settings/: test_key_settings.py  test_login_settings.py
